force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__ActualEndDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualEndDate__c</fullName>
    <label>ACTUAL END DATE</label>
    <type>Date</type>
</CustomField>