force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__ContractID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONTRACT ID</label>
    <referenceTo>clofor_com_cfs__Contract__c</referenceTo>
    <relationshipLabel>PROJECT</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>