force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__ExpenseSpent__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExpenseSpent__c</fullName>
    <label>EXPENSE SPENT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>