force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__ParentProjectID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentProjectID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT PROJECT ID</label>
    <referenceTo>clofor_com_cfs__PROJECT__c</referenceTo>
    <relationshipLabel>CHILD PROJECT</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>