force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__PercentageOfProgress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PercentageOfProgress__c</fullName>
    <label>PERCENTAGE OF PROGRESS%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>