force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__ProjectDetail__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProjectDetail__c</fullName>
    <label>PROJECT DETAIL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>