force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__ProjectManager__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProjectManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PROJECT MANAGER</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>