force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__ProjectName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProjectName__c</fullName>
    <label>PROJECT NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>