force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProjectStartDate__c</fullName>
    <label>PROJECT START DATE</label>
    <type>Date</type>
</CustomField>