force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__ProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProjectStatus__c</fullName>
    <label>PROJECT STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>On Schedule</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>