force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__ProjectSummary__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProjectSummary__c</fullName>
    <label>PROJECT SUMMARY</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>