force-app/main/default/objects/clofor_com_cfs__PROJECT__c/fields/clofor_com_cfs__TotalWorkManDay__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalWorkManDay__c</fullName>
    <label>TOTAL WORK MAN DAY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>