force-app/main/default/objects/clofor_com_cfs__PROJECT__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__ProjectName__c</columns>
    <columns>clofor_com_cfs__ProjectStatus__c</columns>
    <columns>clofor_com_cfs__ProjectManager__c</columns>
    <columns>clofor_com_cfs__Customer__c</columns>
    <columns>clofor_com_cfs__ProjectStartDate__c</columns>
    <columns>clofor_com_cfs__ProjectEndDate__c</columns>
    <columns>clofor_com_cfs__ProjectBudget__c</columns>
    <columns>clofor_com_cfs__ExpenseSpent__c</columns>
    <columns>clofor_com_cfs__BudgetRemained__c</columns>
    <columns>clofor_com_cfs__ContractID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>